src/test/ui/nll/issue-55401.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/issue-55401.rs:3:5
   |
LL |     *y
   |     ^^
   |
   = note: ...the reference is valid for the static lifetime...
note: ...but the borrowed content is only valid for the lifetime `'a` as defined here
  --> $DIR/issue-55401.rs:1:47
   |
LL | fn static_to_a_to_static_through_ref_in_tuple<'a>(x: &'a u32) -> &'static u32 {
   |                                               ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0312`.
